The gpg option --trusted-keys inserts trusted keys into the trustdb as ultimately trusted keys. However, if this option is not anymore used or different keys are given, the old keys are kept in the trustdb. We should fix this by comparing the keys and removing stale trust records.
Description
Description
Revisions and Commits
Revisions and Commits
| Status | Assigned | Task | ||
|---|---|---|---|---|
| Open | None | T5058 Review --trusted-key | ||
| Resolved | • werner | T5685 Clear stale --trusted-key records from the trustdb |